--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 asyncio==3.4.3
 certifi==2025.7.14
 charset-normalizer==3.4.2
@@ -8,11 +9,15 @@ greenlet==3.2.3
 idna==3.10
 libcomps==0.1.18
 pcp==5.0
+pydantic==2.11.7
+pydantic_core==2.33.2
 python-dateutil==2.8.1
 requests==2.32.4
 rpm==4.16.1.3
 six==1.15.0
 systemd-python==234
+typing-inspection==0.4.1
+typing_extensions==4.14.1
 urllib3==2.5.0
 websocket==0.2.1
 websockets==15.0.1
