--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 annotated-types==0.7.0
+anyio==4.10.0
 asyncio==3.4.3
 certifi==2025.7.14
 charset-normalizer==3.4.2
+click==8.1.8
 dbus-python==1.2.18
+exceptiongroup==1.3.0
+fastapi==0.116.1
 gevent==25.5.1
 gpg==1.15.1
 greenlet==3.2.3
+h11==0.16.0
 idna==3.10
 libcomps==0.1.18
 pcp==5.0
@@ -15,10 +20,13 @@ python-dateutil==2.8.1
 requests==2.32.4
 rpm==4.16.1.3
 six==1.15.0
+sniffio==1.3.1
+starlette==0.47.2
 systemd-python==234
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
+uvicorn==0.35.0
 websocket==0.2.1
 websockets==15.0.1
 zope.event==5.1
