--- a/sentinel.ini
+++ b/sentinel.ini
@@ -1,5 +1,12 @@
 [API]
-endpoint=http://172.20.0.5:5000
+endpoint=
 
 [APP]
 logs=/var/log/sentinel
+
+[DATABASE]
+HOST="localhost"
+PORT=27017
+USER="lisahadmin"
+CLS="L1s4hUn14nd3s"
+DATABASE_NAME="lisah"
